test/sh/error/func/func_as_var.sk
x() { noop }

x := 1
